scanner/testcases/good7.cminor
x: integer = 65;
y: char = 'A';
if(x>y) // error: x and y are of different types!

f: integer = 0;
if(f)  "the quick\n fox"    // error: f is not a boolean!

writechar: function void ( char c );
a: integer = 65;
writechar(a);  // error: a is not a char!

b: array [2] boolean = {true,false};
x: integer = 0;
x = b[0];      // error: x is not a boolean!
